# wasmsign2-rules

./: .gitignore  Cargo.toml  README.md
examples/: policy.yaml
src/: main.rs
src/cli/: main.rs
src/lib/: Cargo.toml
src/lib/src/: error.rs  lib.rs
