[package]
name = "wasmsign2-rules-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasmsign2-rules"
path = "src/cli/main.rs"

[dependencies]
clap = { version = "3.0.0", default-features = false, features = [
    "std",
    "cargo",
    "wrap_help",
] }
wasmsign2-rules = { version = "0.1.0", path = "src/lib" }
